# star-fee-routing

./: .gitignore  Anchor.toml  LITESVM_SETUP.md  LOCAL_TESTING.md  README.md  package-lock.json  test-local.sh
.cursor/: scratchpad.md
fixtures/: pool_8uvC7yBc9k3yiBDtvpMoy2FN8HkLj7SnuRN16c9wBAh9.json
idls/: cp_amm.json
programs/star-fee-routing/: Cargo.toml
programs/star-fee-routing/src/: errors.rs  events.rs  lib.rs  state.rs
programs/star-fee-routing/src/tests/: mod.rs
scripts/: pull-programs.sh
tests/: Cargo.toml  lib.rs  mod.rs.backup  test_complete_flow.rs  test_distribution_timing.rs  test_fee_calculations.rs  test_global_state_pda.rs  test_initialize_global_state.rs  test_pagination.rs  test_pda_derivations.rs  test_quote_only_validation.rs  test_state_sizes.rs  test_streamflow_mock.rs  test_y0_calculation.rs
tests/common/: mod.rs
tests/src/: lib.rs  test_distribute.rs  test_initialize.rs  test_integration.rs
