[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
star-fee-routing = { version = "0.1.0", path = "../programs/star-fee-routing" }
tokio = { version = "1.0", features = ["full"] }
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
bincode = "1.3.3"
