[package]
name = "star-fee-routing"
version = "0.1.0"
description = "Star Fee Routing - Meteora DLMM V2 Integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "star_fee_routing"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
streamflow-sdk = { version = "0.10", features = ["cpi"] }
# streamflow_sdk = {version = "0.6", features = ["cpi", "mainnet"]} for mainnet
